--- a/view/admin/mainAdmin-addProduct.html
+++ b/view/admin/mainAdmin-addProduct.html
@@ -322,8 +322,8 @@ body{
                         <ul class="menu">
                             <li><button class="btn_menu_s" type="button"><i class="fas fa-truck"></i> 배송현황</button></li>
                             <li><button class="btn_menu_s" type="button"><i class="fas fa-chart-bar"></i> 매출현황</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="fas fa-chalkboard"></i> 제품등록</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="fab fa-replyd"></i> 답변등록</button></li>
+                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-addProduct.html'"><i class="fas fa-chalkboard"></i> 제품등록</button></li>
+                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-productAnswer.html'"><i class="fab fa-replyd"></i> 답변등록</button></li>
                         </ul>
                     </div>
                 </li> <!-- 스토어 서브메뉴 끝 -->
@@ -337,7 +337,7 @@ body{
                     <div class="menu_sub">
                         <ul class="menu">
                             <li><button class="btn_menu_s active" type="button"><i class="fas fa-user-cog"></i> 회원관리</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="fas fa-tags"></i> 사진태그등록</button></li>
+                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-storyTag.html'"><i class="fas fa-tags"></i> 사진태그등록</button></li>
                             <li><button class="btn_menu_s" type="button"><i class="fas fa-clipboard"></i> 커뮤니티 관리</button></li>
                             <li><button class="btn_menu_s" type="button"><i class="far fa-edit"></i> Q&A게시판 관리</button></li>
                             <li><button class="btn_menu_s" type="button"><i class="far fa-calendar-check"></i> 이벤트 등록</button></li>
