--- a/view/admin/mainAdmin-storyTag.html
+++ b/view/admin/mainAdmin-storyTag.html
@@ -623,8 +623,8 @@ select::-ms-expand{
                         <ul class="menu">
                             <li><button class="btn_menu_s" type="button"><i class="fas fa-truck"></i> 배송현황</button></li>
                             <li><button class="btn_menu_s" type="button"><i class="fas fa-chart-bar"></i> 매출현황</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="fas fa-chalkboard"></i> 제품등록</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="fab fa-replyd"></i> 답변등록</button></li>
+                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-addProduct.html'"><i class="fas fa-chalkboard"></i> 제품등록</button></li>
+                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-productAnswer.html'"><i class="fab fa-replyd"></i> 답변등록</button></li>
                         </ul>
                     </div>
                 </li> <!-- 스토어 서브메뉴 끝 -->
@@ -638,7 +638,7 @@ select::-ms-expand{
                     <div class="menu_sub">
                         <ul class="menu">
                             <li><button class="btn_menu_s active" type="button"><i class="fas fa-user-cog"></i> 회원관리</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="fas fa-tags"></i> 사진태그등록</button></li>
+                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-storyTag.html'"><i class="fas fa-tags"></i> 사진태그등록</button></li>
                             <li><button class="btn_menu_s" type="button"><i class="fas fa-clipboard"></i> 커뮤니티 관리</button></li>
                             <li><button class="btn_menu_s" type="button"><i class="far fa-edit"></i> Q&A게시판 관리</button></li>
                             <li><button class="btn_menu_s" type="button"><i class="far fa-calendar-check"></i> 이벤트 등록</button></li>
@@ -872,7 +872,7 @@ function autoCheck() {
 let pattern = /([0-2][0-9]{3})-([0-1][0-9])-([0-3][0-9]) ([0-5][0-9]):([0-5][0-9]):([0-5][0-9])(([\-\+]([0-1][0-9])\:00))?/;
 
 
-// '인기 상품' 리스트
+// '스토리 글' 리스트
 getStoryTagList();
 function getStoryTagList() {
     $.ajax({
@@ -909,7 +909,7 @@ function getStoryTagList() {
                         +    '<td>';
 
                     if(val.tagCount != 0) {
-                        app += '입력완료';
+                        app += '<span style="color: #9c9b9b;">입력완료</span>';
                     } else {
                         app += '입력대기';                    
                     }
