--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -289,15 +289,13 @@
                     
                     <div class="my_detail_wrap">
                         <div class="my_detail">
-                            <div id="myp"><a href="../myPage/mainMyPage.html"><i class="fas fa-chalkboard-teacher"></i> 마이페이지</a></div>
+                            <div id="myp" onclick="location.href='../myPage/mainMyPage.html'"><i class="fas fa-chalkboard-teacher"></i> 마이페이지</div>
                             <!-- <div><a href="../admin/mainAdmin.html"><i class="fas fa-file-signature"></i> 관리자페이지</a></div> -->
-                            <div class="cart">
-                                <a href="../store/cart.html">
+                            <div class="cart" onclick="location.href='../store/cart.html'">
                                 <svg id="goCart1" xmlns="http://www.w3.org/2000/svg" width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none">
                                     <path d="M16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11M5 9H19L20 21H4L5 9Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                 </svg>
                                 장바구니
-                                </a>
                             </div>
                             <div id="logOut"><i class="fas fa-sign-out-alt"></i> 로그아웃</div>
                         </div>
